--- a/css/smt-bootstrap.less
+++ b/css/smt-bootstrap.less
@@ -1,6 +1,6 @@
 /*!
  * # SMTB - Semantic UI Bootstrap
- * Version v3.0.0
+ * Version v3.1.0
  * http://github.com/cblweb/semantic-ui-bootstrap/
  * Inspired by Semantic UI
  *
@@ -15,6 +15,7 @@
 @import url('component/reveal.less');
 @import url('component/label.less');
 @import url('component/sidebar.less');
+@import url('component/checkbox.less');
 
 body { font-size: 14px; }
 
