--- a/css/component/card.less
+++ b/css/component/card.less
@@ -9,7 +9,8 @@
   &:last-child{border-radius:0 0 .28571429rem .28571429rem!important}
   &:only-child{border-radius:.28571429rem!important}
   >.card-image{position:relative;display:block;-webkit-box-flex:0;-webkit-flex:0 0 auto;-ms-flex:0 0 auto;flex:0 0 auto;padding:0;background:rgba(0,0,0,.05);
-    >img{display:block;width:100%;height:auto;border-radius:inherit}
+    >img,>.reveal-dim>img{display:block;width:100%;height:auto;border-radius:inherit}
+    .label{z-index: 2;}
     //&:not()>img{border:none}
   }
   >.card-content{-webkit-box-flex:1;-webkit-flex-grow:1;-ms-flex-positive:1;flex-grow:1;border:none;border-top:1px solid rgba(34,36,38,.1);background:0 0;margin:0;padding:1em;box-shadow:none;font-size:1em;border-radius:0;
