--- a/css/mixin.less
+++ b/css/mixin.less
@@ -32,6 +32,8 @@
 @alert-color-danger: #FFF6F6, #E0B4B4, #9F3A38;
 @alert-color-warning: #FFFAF3, #C9BA9B, #573a08;
 
+@sidebar-width: 250px;
+
 @brand: primary,info,success,danger,warning;
 
 .for(@brand);
