--- a/css/component/checkbox.less
+++ b/css/component/checkbox.less
@@ -1,32 +1,40 @@
 @import url('../mixin.less');
 
 .radio-s, .checkbox-s { position: relative; cursor: pointer;
-	&:before { content: ''; position: absolute; top: 1px; left: 0; width: 17px; height: 17px; border: 1px solid #d4d4d5; .transition; }
-	&:hover:before { border-color: #999; }
 	input { display: none; }
-	label { padding-left: 22px; line-height: 18px; cursor: pointer; }
-	&.disabled > label, input:disabled + label { color: #999; cursor: no-drop; }
+	label { padding-left: 22px; line-height: 20px; cursor: pointer; display: block;
+		&:before { content: ''; position: absolute; top: 1px; left: 0; width: 17px; height: 17px; border: 1px solid #d4d4d5; .transition; }
+	}
+	&:hover label:before { border-color: #999; }
+	&.disabled > label, input:disabled + label { color: #999; cursor: no-drop;
+		&:before { opacity: 0.7; border-color: #d4d4d5; }
+		&:after { opacity: 0.7; }
+	}
 	&.disabled { cursor: no-drop; }
 }
 .radio-s {
-	&:before { border-radius: 50%; }
-	&.disabled:before { border-color: #d4d4d5; }
-	input:checked + label:after {
+	label:before { border-radius: 50%; }
+	label:after {
 		content: ''; position: absolute; top: 1px; left: 0; width: 17px; height: 17px;
-		background-color: rgba(0,0,0,.8); .transform(scale(0.5)); border-radius: 50%;
+		background-color: rgba(0,0,0,.8); .transform(scale(0)); border-radius: 50%; .transition;
 	}
-	&.disabled > label:after, input:disabled + label:after { opacity: 0.5; }
+	input:checked + label:after { .transform(scale(0.5)); }
 }
 .checkbox-s {
-	&:before { border-radius: 3px; }
-	&.disabled:before { border-color: #d4d4d5; }
+	&.checkbox-inline label { padding-left: 0; }
+	label {
+		&:before { border-radius: 3px; }
+		&:after {
+			content: ''; position: absolute; top: 10px; left: -3px; width: 6px; height: 0; border: 3px solid rgba(0,0,0,.8); border-width: 2.5px 0 0 2.5px;
+			.transform(rotate(-140deg) scale(0)); .transition; transform-origin: right top; -webkit-transform-origin: right top;
+		}
+	}
 	input:checked + label {
-		&:before { content: ''; position: absolute; top: 8px; left: 4px; width: 3px; height: 8px; border-radius: 3px 3px 0 3px; background-color: rgba(0,0,0,.8); .transform(rotate(-38deg)); }
-		&:after { content: ''; position: absolute; top: 4px; left: 9px; width: 3px; height: 12px; border-radius: 5px 5px 5px 0; background-color: rgba(0,0,0,.8); .transform(rotate(36deg)); }
+		&:after { .transform(rotate(-140deg) scale(1)); height: 11px; }
 	}
 	input:indeterminate + label:after {
-		content: ''; position: absolute; top: 1px; left: 0; width: 17px; height: 17px;
-		background-color: rgba(0,0,0,.8); .transform(scale(0.5)); border-radius: 3px;
+		content: ''; position: absolute; top: 1px; left: 0; width: 17px; height: 17px; transform-origin: center center;
+		background-color: rgba(0,0,0,.8); .transform(scale(0.5)); border-radius: 3px; -webkit-transform-origin: center center;
 	}
 }
 .switch {
